--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -148,24 +148,28 @@ The foodnamesare only available  in this  version  in  one  lengthwhich does not
 ## Analyses {#analyses} - Jeesung (both describing the analyses that were run - aka methods and running the analyses)
 
   We will run spectrum clustering to see which foods are grouped together based on their nutrient profile. In doing so, we want to find out whether we can find clear-cut clusters of foods based on nutrition profile regardless of actual food group assignment. Our grouping results can be used to find the list of foods that contain the best combination of nutrients based on a person’s dietary needs. This improves upon diets that try to rely on the actual food grouping, since our grouping result will be a better representation of the nutrient profile of a set of foods than the food group label, which may be determined arbitrarily.
-  Since we have large dimensions of data (153 nutrient information for `r nrow(wide_data)` unique foods), we are going to run principal component analysis (PCA) to capture principal variance among all variables. 
+  Since we have large dimensions of data (153 nutrient information for `r nrow(wide_data)` unique foods), we are going to run principal component analysis (PCA) to
 
-1. How to deal with NAs? : wnat to run PCA and find ideal number of PCs to use for spectrum clustering. can't run it with NAs.(if use na.omit -- no food will survive -- recode it to 0?)
+<< To Be Decided Together with Team>>
+1. How to deal with NAs? : want to run PCA and find ideal number of PCs that will be used for spectrum clustering. can't run prcomp with NAs.(if use na.omit -- no single food will survive -- recode all NAs to 0 for prelim analyses)
 
 2. prcomp : scale and center each column? 
 
-3. two Energy data -- only use one? or remove these two -- i like the idea of predicting average calories of each group that we found -- any recommended methods to do this? just report average calories of each group? 
-Energy is top loading nutrient from PC1
+3. two Energy variables -- only use one? or remove these two? i like the idea of predicting average calories of each cluster that we will assign-- any recommended methods to do this? just report average calories of each cluster? 
+- FYI, according to PCA, Energy is top loading nutrient of PC1 
 
-4. Clustering results using 7 PCs and 5 Clusters 
+4. Prelim results : spectrum clustering using 7 PCs and 5 clusters (when plotted, results don't look pretty)
+
 
 ```{r PCA}
 # recode NAs to 0 to run PCA 
 nutrient_only<-wide_data %>% select(-c(FoodID,FoodGroupID,FoodDescription,FoodGroupName)) 
 nutrient_only[is.na(nutrient_only)] <- 0
+head(nutrient_only)
 
 ## RUN PCA of nutrient data
-pca <- prcomp(nutrient_only)
+pca <- prcomp(nutrient_only,scale=T,center=T)
+
 # names(pca)
 pca.loading<-pca$rotation
 # knitr::kable(pca.loading)
@@ -229,12 +233,13 @@ p <- data.table(x = pca$x[,1],
                 cl = as.factor(wide_data$FoodGroupName),
                 col = as.factor(kmean$cluster)) %>%
   ggplot() + 
-  geom_point(aes(x = x, y = y, col = col)) +
+  geom_point(aes(x = x, y = y, col = col))+
   scale_color_manual(values = scales::hue_pal()(5)) +
   theme_bw() +
   labs(color = "Food Clusters") +
   xlab("PC1") +
   ylab("PC2")
+
 
 p
 ```
