--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -80,6 +80,8 @@ long_data <- wide_data %>% pivot_longer(cols = PROTEIN:`OXALIC ACID`, names_to =
 
 # Executive Summary {#executive-summary} - Tonah
 
+Hope this works!
+
 
 # Introduction {#introduction} - Tonah
 - make sure to include citations - showing why this research matters (can you send me PDFs of the citations you include so I can include them in the final project doc)
