--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -24,7 +24,7 @@ options(scipen = 0, digits = 3, tibble.print_max = 50)
 knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning = F)
 
 if(!require("pacman")) install.packages("pacman")
-pacman::p_load(tidyverse, here, glmnet, car, data.table, summarytools, corrplot, GGally, varhandle, gtsummary, pROC, stargazer, sjPlot, report,tm,SnowballC,wordcloud,RColorBrewer) 
+pacman::p_load(tidyverse, here, glmnet, car, data.table, summarytools, corrplot, GGally, varhandle, gtsummary, pROC, stargazer, sjPlot, report,tm,SnowballC,wordcloud,RColorBrewer, imputeTS) 
 
 
 plot_aes = theme_minimal() +
@@ -146,26 +146,23 @@ The foodnamesare only available  in this  version  in  one  lengthwhich does not
 
 ## Analyses {#analyses} - Jeesung (both describing the analyses that were run - aka methods and running the analyses)
 
-* Analytic Procedure:
-- Dealing with NAs: Option 1. mean imputation; Option 2. Removing variables with more than 50% of NAs + mean imputation of survived varaibles
+As mentioned before, there are several variables with multiple NA values. Therefore, to be able to run our target analyses, we needed to remove the NA values. We explored two different options for removing NA variables to see whether they would affect the results: mean imputation for all variables or first removing variables with more than 50% of NAs and then using mean imputation on the survived variables. 
 
-1) Regular Clustering
- - k-means 
- - result report: wordcloud of each cluster based on most frequent names in food names 
- - PCA to see nutrients with top loadings per cluster
- 
-2) Spectrum Clustering
- - k-means using PCs 
- - result report: wordcloud of each cluster based on most frequent names in food names 
+We found that the options produced similar results across our different options for mean imputation, so we used the version of the dataset where we used mean imputation for all variables in all subsequent analyses. 
 
-- Further Idea: for better interpretation of data... theoretically narrow down nutrients of interest (e.g. Energy, Carb, Protein, Fat, Sugar, Vitamin, Cholestrol) and run the same analyses? 
+Since our goal is to identify the *best* algorithm for grouping foods that will help a person plan out their meals to best suit their needs, we compared different approaches to grouping the foods based on their nutrient profiles. That is, we wanted to maximize within-group similarity, while also minimizing between-group similarity, in nutrient profiles across different food groups. The first option we explored to achieve this goal was by applying k-means clustering to both versions of the dataset using the silhouette method to identify the optimal number of clusters. (briefly EXPLAIN LOGIC BEHIND THIS METHOD). 
 
+  We will run spectrum clustering to see which foods are grouped together based on their nutrient profile. In doing so, we want to find out whether we can find clear-cut clusters of foods based on nutrition profile regardless of actual food group assignment. Our grouping results can be used to find the list of foods that contain the best combination of nutrients based on a persons dietary needs. This improves upon diets that try to rely on the actual food grouping, since our grouping result will be a better representation of the nutrient profile of a set of foods than the food group label, which may be determined arbitrarily.
+  Since we have large dimensions of data (153 nutrient information for `r nrow(wide_data)` unique foods), we are going to run principal component analysis (PCA) to
+
+
+Then, ran analysis on theoretically-driven set of nutrients (based on [WHO](https://www.medicalnewstoday.com/articles/326132)). 
 
 ## 1. Data Cleaning
 ```{r dealing with NAs, include=False}
 ######## data with mean imputation
 data_mean_imp_temp<-wide_data %>% select(-c(FoodID,FoodGroupID,FoodDescription,FoodGroupName))
-data_mean_imp<-imputeTS::na.mean(data_mean_imp_temp,option="mean")
+data_mean_imp<-imputeTS::na_mean(data_mean_imp_temp,option="mean")
 # head(data_mean_imp)
 
 ######## data with variables that have more than 50% of NAs removed  + mean imputation of survived variables
@@ -175,7 +172,7 @@ halfNA<-NAinfo$column_name[NAinfo$ratio_of_NA>0.5]
 # NA inspection per column: sapply(wide_data, function(x) sum(is.na(x)))
 # NAinfo$ratio_of_NA[NAinfo$column_name=="FAT (TOTAL LIPIDS)"]
 data_halfNArm<-wide_data %>% select(-c(halfNA,FoodID,FoodGroupID,FoodDescription,FoodGroupName))
-data_halfNArm_mean_imp<-imputeTS::na.mean(data_halfNArm,option="mean")
+data_halfNArm_mean_imp<-imputeTS::na_mean(data_halfNArm,option="mean")
 # sum(is.na(data_halfNArm_mean_imp))
 ```
 
@@ -2129,36 +2126,50 @@ rbind(pc1_top, pc2_top) %>%
 
 
 ```
-# Methods Parking Lot 
-  We will run spectrum clustering to see which foods are grouped together based on their nutrient profile. In doing so, we want to find out whether we can find clear-cut clusters of foods based on nutrition profile regardless of actual food group assignment. Our grouping results can be used to find the list of foods that contain the best combination of nutrients based on a person’s dietary needs. This improves upon diets that try to rely on the actual food grouping, since our grouping result will be a better representation of the nutrient profile of a set of foods than the food group label, which may be determined arbitrarily.
-  Since we have large dimensions of data (153 nutrient information for `r nrow(wide_data)` unique foods), we are going to run principal component analysis (PCA) to
-
-
-* April 23rd first meeting << To Be Decided Together with Team>>
-1. How to deal with NAs? : want to run PCA and find the ideal number of PCs that will be used for spectrum clustering. can't run prcomp with NAs.(if use na.omit -- no single food will survive -- recode all NAs to 0 for prelim analyses) -- mean imputation 
-
-2. prcomp : scale and center each column? -- prcomp.default(nutrient_only, scale = T, center = T) : cannot rescale a constant/zero column to unit variance
-
-3. two Energy variables 
-- only use either of two?;FYI, according to PCA, Energy is top loading nutrient of PC1 
-- remove both? i like the idea of predicting average calories of each cluster that we will assign
---> any recommended methods to do this? just report average calories of each cluster? 
-
-
-- use tab_model or stargazer for showing regressions (see previous write ups for examples)
-
-- use silhouette method from lecture on clustering to decide on a number of clusters
-
-- just write the code to create the models & figures & Keana will incorporate the results into the results/appendix section - no need to write out the stat output from models - just a symmary of what they generally show & logic will be helpful 
-
-- last time there was writing between the code - which made the formatting look a little weird (ie weird spacing between paragaphs where the code was). this time, let's have all of the code at the end of a section so the formatting doesn't get messed up 
-
-- possibly use this package for assessing model fit (if included): https://github.com/easystats/performance
-What are the words in food description that predict the cluster they might be in? 
 
 # Results - Keana 
 
+Will only describe one mean imputation result (probably the one that best maximizes within similarity and minimizes between similarity across the different approaches. 
+
+First approach: K means clustering on all available nutrients
+Describe:
+- characteristics of cluster - size of cluster, within & between group SS 
+- plot of the "clustering over two randomly chosen variables" 
+- words clouds
+		- interesting that cluster 1 and cluster 8 both have dehydrated as the common word 
+- mean kcal per cluster 
+		- cluster 6 (seems to be associated with high-sugar foods) --  has highest kcal level 
+- most important nutrients based on PCA 
+
+Second approach: spectrum clustering on all available nutrients
+Describe:
+- results from PCA (scree plot), elbow rule 
+- characteristics of cluster - size of cluster, within & between group SS 
+- plot of the "8 food clusters bsaed on 7 PCs" 
+- words clouds
+		- results are bsaically the samee here  
+- mean kcal per cluster 
+- most important nutrients based on PCA 
+
+Third approach: spectrum clustering on theoretically-driven nutrients 
+Describe:
+- plot of the "clustering over two randomly chosen variables" 
+- words clouds
+- mean kcal per cluster 
+- most important nutrients based on PCA 
+
+
+Once we've decided on the best method - Make recommendation for a person who has certain dietary needs 
+
+
+
 - possibly use this package: https://github.com/easystats/parameters
+- use tab_model or stargazer for showing regressions (see previous write ups for examples)
+
+
+
+
+
 
 # Conclusion {#conclusion} - Keana 
 
